src/objects/Recommended_Plan_Details__c.object
<CustomObject>
    <fields>
        <fullName>Discussed_with_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed with client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Policy_Cost__c</fullName>
        <label>Minimum Policy Cost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Exits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Exits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Description__c</fullName>
        <label>Plan Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <label>Plan ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Recommended Plan Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Image_URL__c</columns>
        <columns>Minimum_Policy_Cost__c</columns>
        <columns>Plan_Description__c</columns>
        <columns>Plan_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recommended Plan Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommended Plan Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>